--- a/src/test/burn/WixToolset.WixBA/RootView.xaml
+++ b/src/test/burn/WixToolset.WixBA/RootView.xaml
@@ -19,7 +19,7 @@
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/WixBA;component/Styles.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/WixToolset.WixBA;component/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
